# simple_cpp_database

./: .gitignore  Book.cpp  Book.h  CMakeLists.txt  Doxyfile  ILoader.h  ISaver.h  LibraryObject.cpp  LibraryObject.h  LoaderData.cpp  LoaderData.h  Magazine.cpp  Magazine.h  README.md  SaverData.cpp  SaverData.h  Validator.cpp  main.cpp
doc/html/: Book_8cpp.html  Book_8h.html  Book_8h_source.html  ILoader_8h.html  ILoader_8h_source.html  ISaver_8h.html  ISaver_8h_source.html  LibraryObject_8cpp.html  LibraryObject_8cpp_source.html  LibraryObject_8h.html  LibraryObject_8h_source.html  LoaderData_8cpp.html  LoaderData_8h.html  LoaderData_8h_source.html  Magazine_8cpp.html  Magazine_8h.html  Magazine_8h_source.html  README_8md.html  SaverData_8cpp.html  SaverData_8h.html  SaverData_8h_source.html  Validator_8cpp.html  Validator_8h.html  Validator_8h_source.html  annotated.html  classBook-members.html  classBook.html  classILoader-members.html  classILoader.html  classISaver-members.html  classISaver.html  classLibraryObject-members.html  classLibraryObject.html  classLoaderData-members.html  classLoaderData.html  classMagazine-members.html  classMagazine.html  classSaverData-members.html  classSaverData.html  classValidator-members.html  (+28 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  (+1 more)
doc/latex/: Book_8cpp.tex  Book_8h.tex  Book_8h_source.tex  ILoader_8h.tex  ILoader_8h_source.tex  ISaver_8h.tex  ISaver_8h_source.tex  LibraryObject_8cpp.tex  LibraryObject_8cpp_source.tex  LibraryObject_8h.tex  LibraryObject_8h_source.tex  LoaderData_8cpp.tex  LoaderData_8h.tex  LoaderData_8h_source.tex  Magazine_8cpp.tex  Magazine_8h.tex  Magazine_8h_source.tex  SaverData_8cpp.tex  SaverData_8h.tex  SaverData_8h_source.tex  Validator_8cpp.tex  Validator_8h.tex  Validator_8h_source.tex  annotated.tex  classBook.tex  classILoader.tex  classISaver.tex  classLibraryObject.tex  classLoaderData.tex  classMagazine.tex  classSaverData.tex  classValidator.tex  dir_1203d33cc236adf22f98013e6da63b9e.tex  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.tex  dir_3d2e4578fe4cc3b7fa6177047437af5b.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7e601e2a515548177b5bfb6bb6b0b85f.tex  dir_81eb0c9525d654d598c1b2eea2aa8c93.tex  dir_b5172b53571d8b2ee93063d91f8e5d61.tex  dir_c198f1cefdb4c20ce5df2b5e659f8ce8.tex  (+9 more)
header/data/: Book.h  LibraryObject.h  Magazine.h
header/logic/: Validator.h
header/logic/loader/: ILoader.h  LoaderData.h
header/logic/saver/: ISaver.h  SaverData.h
src/: main.cpp
src/logic/: Validator.cpp
src/logic/loader/: LoaderData.cpp
src/logic/saver/: SaverData.cpp
